# git-server

./: Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  cliff.toml
.github/workflows/: bench.yml  release.yml
crates/git-server/: Cargo.toml
crates/git-server-bench/: Cargo.toml
crates/git-server-bench/benches/: concurrent.rs  git_clone.rs  http_clone.rs  pack.rs  refs.rs
crates/git-server-bench/src/: fixtures.rs
crates/git-server-core/: Cargo.toml
crates/git-server-core/src/: backend.rs  discovery.rs  error.rs  lib.rs  pack.rs  path.rs  pktline.rs  refs.rs
crates/git-server-http/: Cargo.toml
crates/git-server-http/src/: error.rs  handlers.rs
crates/git-server-http/tests/: integration.rs  load.rs
crates/git-server/src/: main.rs
dev/bench/: data.js
