[workspace]
resolver = "2"
members = [
    "crates/git-server-core",
    "crates/git-server-http",
    "crates/git-server",
    "crates/git-server-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ggueret/git-server"

[workspace.dependencies]
git-server-core = { path = "crates/git-server-core" }
git-server-http = { path = "crates/git-server-http" }
gix = "0.80.0"
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
