[package]
name = "git-server-core"
description = "Core Git protocol operations for git-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gix = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
miniz_oxide = "0.8"
sha1 = "0.10"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
