[package]
name = "git-server-http"
description = "HTTP layer for git-server using Axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
git-server-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }
