[package]
name = "git-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
git-server-core = { workspace = true }
git-server-http = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
